kyverno/block-auth-logs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-authorization-header-logs
spec:
  validationFailureAction: audit
  rules:
    - name: block-authorization-header-logs
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Logging Authorization headers is not allowed."
        pattern:
          spec:
            containers:
              - name: "*"
                env:
                  - name: "*"
                    value: "!*Authorization*"
